# CodingTrain-Challenges

./: .gitignore  Cargo.toml  template.rs
001_starfield/: Cargo.toml
001_starfield/src/: lib.rs
002_mengersponge/: Cargo.toml
002_mengersponge/src/: lib.rs
003_snake/: Cargo.toml
003_snake/src/: food.rs  lib.rs  snake.rs
004_purplerain/: Cargo.toml
004_purplerain/src/: lib.rs
005_spaceinvaders/: Cargo.toml
005_spaceinvaders/src/: alien.rs  alienship.rs  lib.rs  projectile.rs  spaceship.rs
006_mitosis/: Cargo.toml
006_mitosis/src/: lib.rs
007_solarsystem/: Cargo.toml
007_solarsystem/src/: body.rs  lib.rs
010_mazegenerator/: Cargo.toml
010_mazegenerator/src/: hexagon_maze.rs  lib.rs  maze.rs
013_reactiondiffusion/: Cargo.toml
013_reactiondiffusion/src/: cell.rs  lib.rs
014_fractaltrees/: Cargo.toml
014_fractaltrees/src/: lib.rs
016_lsystem/: Cargo.toml
016_lsystem/src/: algae.rs  bin_tree.rs  cantor.rs  dragon.rs  koch.rs  lib.rs  plant.rs  sierpinski.rs  sierpinski_curve.rs  systems.rs  turtle.rs
017_spacecolonization/: Cargo.toml
017_spacecolonization/src/: lib.rs
019_supershape/: Cargo.toml
019_supershape/src/: lib.rs
01_starfield/: Cargo.toml
01_starfield/src/: lib.rs  main.rs
02_mengersponge/: Cargo.toml
02_mengersponge/src/: lib.rs
03_snake/: Cargo.toml
03_snake/src/: food.rs  lib.rs  snake.rs
challenges/001_starfield/: Cargo.toml
challenges/001_starfield/src/: lib.rs
challenges/002_mengersponge/: Cargo.toml
challenges/002_mengersponge/src/: lib.rs
challenges/003_snake/: Cargo.toml
challenges/003_snake/src/: food.rs  lib.rs  snake.rs
challenges/004_purplerain/: Cargo.toml
challenges/004_purplerain/src/: lib.rs
challenges/005_spaceinvaders/: Cargo.toml
challenges/005_spaceinvaders/src/: alien.rs  alienship.rs  lib.rs  projectile.rs  spaceship.rs
challenges/006_mitosis/: Cargo.toml
challenges/006_mitosis/src/: lib.rs
challenges/007_solarsystem/: Cargo.toml
challenges/007_solarsystem/src/: body.rs  lib.rs
challenges/010_mazegenerator/: Cargo.toml
challenges/010_mazegenerator/src/: hexagon_maze.rs  lib.rs  maze.rs
challenges/013_reactiondiffusion/: Cargo.toml
challenges/013_reactiondiffusion/src/: cell.rs  lib.rs
challenges/014_fractaltrees/: Cargo.toml
challenges/014_fractaltrees/src/: lib.rs
challenges/016_lsystem/: Cargo.toml
challenges/016_lsystem/src/: algae.rs  bin_tree.rs  cantor.rs  dragon.rs  koch.rs  l_system.rs  lib.rs  plant.rs  sierpinski.rs  sierpinski_curve.rs  systems.rs  turtle.rs
challenges/017_spacecolonization/: Cargo.toml
challenges/017_spacecolonization/src/: lib.rs
challenges/019_supershape/: Cargo.toml
challenges/019_supershape/src/: lib.rs
challenges/021_mandelbrot/: Cargo.toml
challenges/021_mandelbrot/src/: lib.rs
challenges/022_juliaset/: Cargo.toml
challenges/022_juliaset/src/: lib.rs
challenges/024_perlinnoise/: Cargo.toml
challenges/024_perlinnoise/src/: lib.rs
challenges/027_fireworks/: Cargo.toml
challenges/027_fireworks/src/: lib.rs
challenges/028_metaballs/: Cargo.toml
challenges/028_metaballs/src/: lib.rs
challenges/029_smartrockets/: Cargo.toml
challenges/029_smartrockets/src/: genes.rs  lib.rs  rocket.rs
challenges/030_phyllotaxis/: Cargo.toml
challenges/030_phyllotaxis/src/: lib.rs
challenges/031_flappybird/: Cargo.toml
challenges/031_flappybird/src/: bird.rs  lib.rs  pipe.rs
challenges/032_agario/: Cargo.toml
challenges/032_agario/src/: enemy.rs  food.rs  lib.rs  player.rs
challenges/033_poissondisk/: Cargo.toml
challenges/033_poissondisk/src/: lib.rs
challenges/034_diffusionlimitedaggregation/: Cargo.toml
challenges/034_diffusionlimitedaggregation/src/: aggregator.rs  lib.rs  trace.rs  walker.rs
challenges/035_travellingsalesperson/: Cargo.toml
challenges/035_travellingsalesperson/src/: brute_force.rs  genetic.rs  graph.rs  lib.rs
challenges/036_blobby/: Cargo.toml
challenges/036_blobby/src/: lib.rs
challenges/037_diasticmachine/: Cargo.toml
challenges/037_diasticmachine/src/: lib.rs
challenges/038_wordinteractor/: Cargo.toml
challenges/038_wordinteractor/src/: lib.rs
challenges/039_madlibs/: Cargo.toml  sentences.txt
challenges/039_madlibs/src/: lib.rs
challenges/040_tfidf/: Cargo.toml
challenges/040_tfidf/src/: lib.rs  word_freq.rs
challenges/042_markovchain/: Cargo.toml
challenges/042_markovchain/src/: lib.rs
challenges/043_contextfreegrammar/: Cargo.toml
challenges/043_contextfreegrammar/src/: lib.rs
challenges/044_afinn/: Cargo.toml  afinn.txt  input.txt
challenges/044_afinn/src/: lib.rs
challenges/046_asteroids/: Cargo.toml
challenges/046_asteroids/src/: asteroid.rs  bullet.rs  lib.rs  player.rs
challenges/047_pixelsorting/: Cargo.toml
challenges/047_pixelsorting/src/: lib.rs
challenges/050_circlepacking/: Cargo.toml
challenges/050_circlepacking/src/: area.rs  circle.rs  lib.rs
challenges/051_astar/: Cargo.toml
challenges/051_astar/src/: lib.rs
graphics_lib/: Cargo.toml
graphics_lib/src/: app.rs  drawable.rs  eventhandler.rs  grid.rs  input_handler.rs  lib.rs  point.rs  vec2d.rs
lib/graphics/: Cargo.toml
lib/graphics/src/: app.rs  drawable.rs  lib.rs  poly_outline.rs  runnable.rs
lib/graphics/src/colors/: hsv.rs  mod.rs  rgba.rs
lib/graphics/src/traits/: drawable.rs  mod.rs  runnable.rs  updatable.rs
lib/graphics/src/ui_elements/: button.rs  mod.rs  textfield.rs
lib/math/: Cargo.toml
lib/math/src/: grid.rs  lib.rs  mat22.rs  vec2d.rs
runner/: Cargo.toml
runner/src/: main.rs
