[workspace]
members = [
  "runner",
  "graphics_lib",
  "001_starfield",
  "002_mengersponge",
  "003_snake",
  "004_purplerain",
  "005_spaceinvaders",
  "006_mitosis",
  "007_solarsystem",
  "010_mazegenerator",
  "013_reactiondiffusion",
  "014_fractaltrees",
  "016_lsystem",
  "017_spacecolonization",
  "019_supershape"
]

resolver = "2"
default-members = ["runner"]
