[workspace]
members = [
  "runner",
  "lib/graphics",
  "lib/math",
  "challenges/001_starfield",
  "challenges/002_mengersponge",
  "challenges/003_snake",
  "challenges/004_purplerain",
  "challenges/005_spaceinvaders",
  "challenges/006_mitosis",
  "challenges/007_solarsystem",
  "challenges/010_mazegenerator",
  "challenges/013_reactiondiffusion",
  "challenges/014_fractaltrees",
  "challenges/016_lsystem",
  "challenges/017_spacecolonization",
  "challenges/019_supershape",
  "challenges/021_mandelbrot",
  "challenges/022_juliaset",
  "challenges/024_perlinnoise",
  "challenges/027_fireworks",
  "challenges/028_metaballs"
]

resolver = "2"
default-members = ["runner"]
