[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
graphics_lib = { path="../graphics_lib" }
starfield = { path="../001_starfield" }
mengersponge = { path="../002_mengersponge" }
snake = { path="../003_snake" }
purplerain = { path="../004_purplerain" }
spaceinvaders= { path="../005_spaceinvaders" }
mitosis={path="../006_mitosis"}
solarsystem={path="../007_solarsystem"}
mazegenerator={path="../010_mazegenerator"}
reactiondiffusion={path="../013_reactiondiffusion"}
fractaltrees={path="../014_fractaltrees"}
