[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
graphics = { path="../lib/graphics" }
starfield = { path="../001_starfield" }
mengersponge = { path="../002_mengersponge" }
snake = { path="../003_snake" }
purplerain = { path="../004_purplerain" }
spaceinvaders= { path="../005_spaceinvaders" }
mitosis={path="../006_mitosis"}
solarsystem={path="../007_solarsystem"}
mazegenerator={path="../010_mazegenerator"}
reactiondiffusion={path="../013_reactiondiffusion"}
fractaltrees={path="../014_fractaltrees"}
lsystem={path="../016_lsystem"}
spacecolonization={path="../017_spacecolonization"}
supershape={path="../019_supershape"}
