[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
graphics = { path="../lib/graphics" }
starfield = { path="../challenges/001_starfield" }
mengersponge = { path="../challenges/002_mengersponge" }
snake = { path="../challenges/003_snake" }
purplerain = { path="../challenges/004_purplerain" }
spaceinvaders= { path="../challenges/005_spaceinvaders" }
mitosis={path="../challenges/006_mitosis"}
solarsystem={path="../challenges/007_solarsystem"}
mazegenerator={path="../challenges/010_mazegenerator"}
reactiondiffusion={path="../challenges/013_reactiondiffusion"}
fractaltrees={path="../challenges/014_fractaltrees"}
lsystem={path="../challenges/016_lsystem"}
spacecolonization={path="../challenges/017_spacecolonization"}
supershape={path="../challenges/019_supershape"}
mandelbrot={path="../challenges/021_mandelbrot"}
juliaset={path="../challenges/022_juliaset"}
perlinnoise={path="../challenges/024_perlinnoise"}
fireworks={path="../challenges/027_fireworks"}
metaballs={path="../challenges/028_metaballs"}
smartrockets={path="../challenges/029_smartrockets"}
phyllotaxis={path="../challenges/030_phyllotaxis"}
flappybird={path="../challenges/031_flappybird"}
agario={path="../challenges/032_agario"}
poissondisk={path="../challenges/033_poissondisk"}
diffusionlimitedaggregation={path="../challenges/034_diffusionlimitedaggregation"}
travellingsalesperson={path="../challenges/035_travellingsalesperson"}
blobby={path="../challenges/036_blobby"}
diasticmachine={path="../challenges/037_diasticmachine"}
wordinteractor={path="../challenges/038_wordinteractor"}
