[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[dependencies] 
math = {path="../math"}
rand = "0.8.5"
piston = "1.0.0" 
piston_window="0.132.0"
piston2d-graphics = "0.44.0" 
pistoncore-glutin_window = "0.72.0" 
pistoncore-window = "1.0.0"
piston2d-opengl_graphics = "0.85.0"
chrono = "0.4.39"
gfx_device_gl = "0.16.2"
piston2d-gfx_graphics = "0.81.0"
